--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
 
-.App {
-  text-align: center;
-  margin: 50px;
+.navbar{
+  text-align: right;
 }
-
-nav ul {
-  list-style: none;
-  padding: 50;
+.navbar li{
+  display: inline-block;
+  padding:20px;
 }
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
+.navbar-link{
+  color:black;
+  text-decoration: none;
 }
-
+.navbar-link:hover{
+  color:green;
+}
+/*.active{
+  color:blue;
+}*/
