--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,6 @@
   display: inline-block;
   padding:20px;
 }
-.navbar-link{
-  color:black;
-  text-decoration: none;
-}
-.navbar-link:hover{
-  color:green;
-}
-/*.active{
+/*.navbar-link{
   color:blue;
 }*/
